--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
 <header>
     <div class="container">
         <div class="intro">
-            <p class="intro__pre">Hello</p>
-            <p class="intro__main">My name is <span>{{ site.name }}</span>, a {{ site.job }} who loves all things {{ site.languages }}</p>
-            <p class="intro__post">{{ site.location }}</p>
+            <p class="intro__pre">Curriculum Vitae</p>
+            <p class="intro__main">{{ site.name }}, <br> {{ site.lab }}, {{ site.school }}</p>
+            <p class="intro__post">{{ site.job }}</p>
         </div>
 
         {{ if site.github_username or site.codepen_username or site.twitter_username or site.email_address }}
