--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,15 +2,13 @@
     <div class="container">
         <div class="intro">
             <p class="intro__pre">Curriculum Vitae</p>
-            <p class="intro__main">{{ site.name }}, <br> {{ site.lab }}, {{ site.school }}</p>
+            <p class="intro__main">{{ site.name }} <br> {{ site.lab }} <br> {{ site.school }}</p>
             <p class="intro__post">{{ site.job }}</p>
         </div>
 
         {{ if site.github_username or site.codepen_username or site.twitter_username or site.email_address }}
         <div class="social">
             {{ if site.github_username }}<a href="http://github.com/{{ site.github_username }}" target="_blank">GitHub</a>{{ endif }}
-            {{ if site.codepen_username }}<a href="http://codepen.io/{{ site.codepen_username }}" target="_blank">CodePen</a>{{ endif }}
-            {{ if site.twitter_username }}<a href="http://twitter.com/{{ site.twitter_username }}" target="_blank">Twitter</a>{{ endif }}
             {{ if site.email_address }}<a href="mailto:{{ site.email_address }}" target="_blank">Email</a>{{ endif }}
         </div>
         {{ endif }}
