Edit first paragraph & footer

--- a/_includes/resume.html
+++ b/_includes/resume.html
@@ -1,19 +1,19 @@
 <!-----------------------------Education--------------------------->
-<h3 class="section-title">Experience</h3>
+<h3 class="section-title">Education</h3>
 <dl class="experience">
-    {% for job in site.data.jobs %}
+    {% for edu in site.data.education %}
         <dt>
-            <p class="title">{{ job.title }}</p>
-            <p class="company">{{ job.company }}</p>
-            <p class="period">{{ job.period }}</p>
+            <p class="title">{{ edu.title }}</p>
+            <p class="company">{{ edu.sub_title }}</p>
+            <p class="period">{{ edu.period }}</p>
         </dt><!--
         --><dd>
-            <p>{{ job.description }}</p>
+            <p>{{ edu.description }}</p>
         </dd>
     {% endfor %}
 </dl>
 <!-----------------------------Research Interest--------------------------->
-<h3 class="section-title">Education</h3>
+<h3 class="section-title">Research Interest</h3>
 <dl class="education">
     {% for qualification in site.data.education %}
         <dt>
@@ -27,7 +27,7 @@
     {% endfor %}
 </dl>
 <!-----------------------------Publication--------------------------->
-<h3 class="section-title">Education</h3>
+<h3 class="section-title">Publication</h3>
 <dl class="education">
     {% for qualification in site.data.education %}
         <dt>
@@ -41,7 +41,7 @@
     {% endfor %}
 </dl>
 <!-----------------------------Conference--------------------------->
-<h3 class="section-title">Education</h3>
+<h3 class="section-title">Conference</h3>
 <dl class="education">
     {% for qualification in site.data.education %}
         <dt>
@@ -55,7 +55,7 @@
     {% endfor %}
 </dl>
 <!-----------------------------Research Experience--------------------------->
-<h3 class="section-title">Education</h3>
+<h3 class="section-title">Research Experience</h3>
 <dl class="education">
     {% for qualification in site.data.education %}
         <dt>
@@ -69,7 +69,7 @@
     {% endfor %}
 </dl>
 <!-----------------------------Work Experience--------------------------->
-<h3 class="section-title">Education</h3>
+<h3 class="section-title">Work Experience</h3>
 <dl class="education">
     {% for qualification in site.data.education %}
         <dt>
@@ -83,7 +83,7 @@
     {% endfor %}
 </dl>
 <!-----------------------------Teaching Experience--------------------------->
-<h3 class="section-title">Education</h3>
+<h3 class="section-title">Teaching Experienc</h3>
 <dl class="education">
     {% for qualification in site.data.education %}
         <dt>
@@ -97,7 +97,7 @@
     {% endfor %}
 </dl>
 <!-----------------------------Award--------------------------->
-<h3 class="section-title">Education</h3>
+<h3 class="section-title">Award</h3>
 <dl class="education">
     {% for qualification in site.data.education %}
         <dt>
@@ -111,7 +111,7 @@
     {% endfor %}
 </dl>
 <!-----------------------------Skill--------------------------->
-<h3 class="section-title">Education</h3>
+<h3 class="section-title">Skill</h3>
 <dl class="education">
     {% for qualification in site.data.education %}
         <dt>
