--- a/_includes/resume.html
+++ b/_includes/resume.html
@@ -53,7 +53,7 @@
 </dl>
 <!-----------------------------Research Experience--------------------------->
 <h3 class="section-title">Research Experience</h3>
-<dl class="project">
+<dl class="education">
     {% for proj in site.data.research_experience %}
         <dt>
             <p class="title">{{ proj.title }}</p>
@@ -68,28 +68,28 @@
 <!-----------------------------Work Experience--------------------------->
 <h3 class="section-title">Work Experience</h3>
 <dl class="education">
-    {% for qualification in site.data.education %}
+    {% for proj in site.data.work_experience %}
         <dt>
-            <p class="title">{{ qualification.qualification }}</p>
-            <p class="company">{{ qualification.school }}</p>
-            <p class="period">{{ qualification.period }}</p>
+            <p class="title">{{ proj.title }}</p>
+            <p class="company">{{ proj.sub_title }}</p>
+            <p class="period">{{ proj.period }}</p>
         </dt><!--
         --><dd>
-            <p>{{ qualification.description }}</p>
+            <p>{{ proj.description }}</p>
         </dd>
     {% endfor %}
 </dl>
 <!-----------------------------Teaching Experience--------------------------->
-<h3 class="section-title">Teaching Experienc</h3>
+<h3 class="section-title">Teaching Experience</h3>
 <dl class="education">
-    {% for qualification in site.data.education %}
+    {% for proj in site.data.teach_experience %}
         <dt>
-            <p class="title">{{ qualification.qualification }}</p>
-            <p class="company">{{ qualification.school }}</p>
-            <p class="period">{{ qualification.period }}</p>
+            <p class="title">{{ proj.title }}</p>
+            <p class="company">{{ proj.sub_title }}</p>
+            <p class="period">{{ proj.period }}</p>
         </dt><!--
         --><dd>
-            <p>{{ qualification.description }}</p>
+            <p>{{ proj.description }}</p>
         </dd>
     {% endfor %}
 </dl>
