--- a/_includes/resume.html
+++ b/_includes/resume.html
@@ -53,7 +53,7 @@
 </dl>
 <!-----------------------------Research Experience--------------------------->
 <h3 class="section-title">Research Experience</h3>
-<dl class="education">
+<dl class="research_experience">
     {% for proj in site.data.research_experience %}
         <dt>
             <p class="title">{{ proj.title }}</p>
