--- a/_includes/resume.html
+++ b/_includes/resume.html
@@ -67,7 +67,7 @@
 </dl>
 <!-----------------------------Work Experience--------------------------->
 <h3 class="section-title">Work Experience</h3>
-<dl class="conference">
+<dl class="education">
     {% for proj in site.data.work_experience %}
         <dt>
             <p class="title">{{ proj.title }}</p>
