--- a/_includes/resume.html
+++ b/_includes/resume.html
@@ -39,7 +39,7 @@
 </dl>
 <!-----------------------------Conference--------------------------->
 <h3 class="section-title">Conference</h3>
-<dl class="conference">
+<dl class="publication">
     {% for conf in site.data.conference %}
         <dt>
             <p class="title">{{ conf.title }}</p>
